# apple-music-rpc-cpp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  cpplint.yml
scripts/: cppcheck.sh  cpplint.sh
src/: client_connection.cpp  discord_ipc_client.cpp  json.cpp  main.cpp  parser.cpp  socket_client.cpp  utils.cpp
src/apple_music_rpc_cpp/: apple_music.mm  itunes_api.mm  main.cpp  music_types.cpp  notif_binder.mm  objc_bridge.mm  utils.cpp
src/apple_music_rpc_cpp/include/: apple_music.h  itunes_api.h  music_types.hpp  notif_binder.h  objc_bridge.hpp  utils.hpp
src/include/: client_connection.hpp  discord_ipc_client.hpp  json.hpp  parser.hpp  socket_client.hpp  utils.hpp
